# local_static

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: clippy.yml  fmt.yml  test.yml
examples/: basic.rs  demo.rs  link_section.rs  scope.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: cfg.rs  no_alias.rs  no_shadowing.rs  trybuild.rs
tests/compile_fail/: local_static_shadow.rs  local_static_shadow.stderr  non_upper_case_globals.rs  non_upper_case_globals.stderr  regular_static_shadow.rs  regular_static_shadow.stderr
tests/compile_pass/: allow_non_upper_case_globals.rs  cfg.rs
