[package]
authors = ["Isaac Dynamo <isaacdynamo@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "local_static_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "2.0"